TBS-501 fix toggle visibility profile, add short info

--- a/resources/sass/core/variables.scss
+++ b/resources/sass/core/variables.scss
@@ -103,4 +103,4 @@ $xxl: 1400px;
 $shadow-1: 0px 4px 24px rgba(0, 0, 0, 0.08);
 
 
-$header-height: 85px;
+$header-height: 140px;
