--- a/resources/sass/redezign/pages/community.scss
+++ b/resources/sass/redezign/pages/community.scss
@@ -46,7 +46,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 60px;
+        // margin-top: 60px;
         
         &:before {
             content: "";
